# CasterDashboard2

./: .dockerignore  .env.docker  .env.example  .gitignore  .gitignore.old  .gitlab-ci.yml  .gitmodules  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  VERSION  ci-settings.py  docker-compose-start.sh  docker-compose.yml  docker-settings.py  gitlab-db-settings.ci  ingame.css  ingame.css.map  manage.py  nginx.conf  pip_outdated.txt  requirements.txt  requirements_old.txt  settings.py
backend/: .coveragerc  .devcontainer.json  .dockerignore  .env.devcontainer  .env.docker  .env.example  .env.testing  .gitignore  .pylintrc  Dockerfile  VERSION  docker-start.sh  pyproject.toml  pytest.ini
backend/docs/: channels.md  index.md
backend/src/: manage.py
backend/src/api/: filter.py  tokens.py  urls.py  views.py
backend/src/caster_dashboard_2/: asgi.py  context_processors.py  routing.py  settings.py  urls.py  version.py  wsgi.py
backend/src/core/: admin.py  apps.py  channels.py  filters.py  models.py  receivers.py  serializers.py  socket.py  tests.py  views.py
backend/src/dashboard/: admin.py  forms.py  tests.py  validators.py  views.py
backend/src/main/: admin.py  apps.py  channels.py  models.py  receivers.py  serializers.py  socket.py  views.py
backend/src/match/: admin.py  apps.py  channels.py  models.py  receivers.py  serializers.py  socket.py  views.py
backend/src/overlays/: admin.py  apps.py  channels.py  models.py  receivers.py  serializers.py  tests.py  views.py
backend/src/scss/: adminlte-extension.scss
backend/src/sockets/: apps.py  sio_server.py
backend/src/user/: admin.py  (+6 more)
(+714 files in other folders)
