[tool.poetry]
name = "CasterDashboard2"
version = "2.0.0-beta1"
description = ""
authors = ["Thorsten Schmitt <dev@tschmitt.eu>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
django-filter = "^22.1"
django-environ = "^0.9.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.0.0"
channels = "^3.0.5"
channels-redis = "^3.4.1"
argon2-cffi = "^21.3.0"
autopep8 = "^1.6.0"
Pillow = "^9.2.0"
pylint = "^2.15.6"
psycopg2-binary = "^2.9.2"
requests = "^2.28.1"
django-cors-headers = "^3.13.0"
pylint-django = "^2.5.3"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
